--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "^11.0.0",
+    "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.11.3",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "emotion": "^11.0.0",
     "framer-motion": "^4.1.8",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
@@ -33,6 +35,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.1.0",
     "react-spring": "^9.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
